# docs/swagger.json
@@ -10,7 +10,7 @@
     "paths": {
         "/lists": {
             "get": {
-                "description": "get all",
+                "description": "Get all",
                 "consumes": [
                     "application/json"
                 ],
@@ -57,8 +57,8 @@
                     }
                 ],
                 "responses": {
-                    "204": {
-                        "description": "No Content",
+                    "404": {
+                        "description": "Not Found",
                         "schema": {
                             "type": "string"
                         }
